added theme switcher file

--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -22,6 +22,7 @@
   }
   &.elements {
     background-color: var(--dark-Elements);
+    border: var(--dark-Elements);
   }
   &.background {
     background-color: var(--dark-Background);
