--- a/src/assets/fonts.scss
+++ b/src/assets/fonts.scss
@@ -1,7 +1,13 @@
+@use "sass:math";
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,600;6..12,800&display=swap");
-
 $browser-context: 16; // Default
 //https://css-tricks.com/snippets/sass/px-to-em-functions/
 @function rem($pixels, $context: $browser-context) {
   @return (math.div($pixels, $context)) * 1rem;
+}
+
+:root {
+  --weight-light: 300;
+  --weight-mid: 600;
+  --weight-heavy: 800;
 }
